--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "qcode-decoder",
+  "name": "qcode-decoder-fixed",
   "main": "build/main.min.js",
   "description": "Decodes QRCode in the browser and node",
-  "version": "0.1.0",
+  "version": "1.0",
   "homepage": "https://github.com/cirocosta/qcode-decoder",
   "authors": [
     "Ciro S. Costa <ciro.costa@usp.br>"
